# api/docs/swagger.json
@@ -643,6 +643,35 @@
                 }
             }
         },
+        "/v1/categories": {
+            "get": {
+                "description": "This API for getting all categories",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "category"
+                ],
+                "summary": "GetAllCategory",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/structs.Categories"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/structs.StandardErrorModel"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/category": {
             "put": {
                 "description": "This API for updating category",
@@ -733,7 +762,7 @@
                 }
             }
         },
-        "/v1/category/:id": {
+        "/v1/category/{id}": {
             "get": {
                 "description": "This API for getting category by id",
                 "consumes": [
@@ -808,35 +837,6 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/structs.StandardErrorModel"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/structs.StandardErrorModel"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/category/getAll": {
-            "get": {
-                "description": "This API for getting all categories",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "category"
-                ],
-                "summary": "GetAllCategory",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/structs.Categories"
                         }
                     },
                     "500": {
